--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,29 @@
 Código Hexadecimal verde: #8EC641
 Código Hexadecimal gris footer: #3B3B3B
 */
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box:
+	font-family: 'Raleway';
+	font-size: 16px;
+}
+
+
+#bienvenida {
+	background: url('../img/fondo-bienvenida.jpg');
+	background-size: cover;
+	background-position: center;
+	padding: 50px 0;
+}
+
+.log{
+	text-align: left;
+	padding: 0 30px;
+}
+
+.mensaje{
+	text{
+		text-align: center;
+	}
+}
